Small CSS tweaks to fix submit button not showing up
Change: video size now changes by viewport height instead of width

Smaller screens have a problem with the height being smaller while the width is almost always going to be large(r). So making the ratio of the video height-dependent instead of width-dependent makes sense here

--- a/styles/Video.module.css
+++ b/styles/Video.module.css
@@ -1,6 +1,6 @@
 .recorder {
-    width: 50vw;
-    height: calc(50vw * 3/4);
+    width: calc(50vh * 4/3);
+    height: 50vh;
     min-width: 500px;
     max-width: 640px;
     max-height: 480px;
@@ -24,8 +24,8 @@
 }
 
 .videoContainer {
-    width: 50vw;
-    height: calc(50vw * 3/4);
+    width: calc(50vh * 4/3);
+    height: 50vh;
     min-width: 500px;
     max-width: 640px;
     max-height: 480px;
